SizeInput: fix slider overflow on small breakpoint

--- a/src/components/SizeInput/SizeInput.css
+++ b/src/components/SizeInput/SizeInput.css
@@ -35,6 +35,10 @@
   .size-bar input {
     margin: 0 auto;
   }
+
+  .size-bar label {
+    display: none;
+  }
 }
 
 .size-bar input::-webkit-slider-thumb {
